feat: implementar contol de excepciones
