# src/main/java/com/bcncgroup/pricingservice/shared/infrastructure/api/rest/models/ProblemDetails.java
@@ -1,0 +1,7 @@
+package com.bcncgroup.pricingservice.shared.infrastructure.api.rest.models;
+
+public record ProblemDetails (
+    String status,
+    String title,
+    String detail){
+}
